--- a/R1.md
+++ b/R1.md
@@ -1,5 +1,5 @@
 # 100 Days Of Code - Log
-
+<--
 ### Day 0: February 30, 2016 (Example 1)
 ##### (delete me or comment me out)
 
@@ -28,3 +28,12 @@
 **Link(s) to work**
 1. [Find the Longest Word in a String](https://www.freecodecamp.com/challenges/find-the-longest-word-in-a-string)
 2. [Title Case a Sentence](https://www.freecodecamp.com/challenges/title-case-a-sentence)
+-->
+
+### Day 1: July 31, Tuesday
+
+**Today's Progress**: I resumed working on my personal website.
+
+**Thoughts:** I do way more reading on concepts and material than I have actually been coding. I know it's better to learn as you code, but the information sponge in me wants to know all about my tools first before diving into projects! A weakness of mine I'm trying to fix through 100 days of code! I put the blog portion of the website back and created image hyperlinks to my social media. 
+
+**Link to work:**[Personal Website](wakahisa.github.io)
