--- a/R1.md
+++ b/R1.md
@@ -7,3 +7,11 @@
 **Thoughts:** I do way more reading on concepts and material than I have actually been coding. I know it's better to learn as you code, but the information sponge in me wants to know all about my tools first before diving into projects! A weakness of mine I'm trying to fix through 100 days of code! I put the blog portion of the website back and created image hyperlinks to my social media. 
 
 **Link to work:** [Personal Website](wakahisa.github.io)
+
+### Day 2: August 1, Wednesday
+
+**Today's Progress**: I tried to begin work on a spring application.. and fixed a bug to launch eclipse.
+
+**Thoughts:** I couldn't open eclipse since I updated java.. I went into the eclipse.ini and made a tweak I found on stack overflow to reroute the path variable. It was really late and I didn't have energy to do much.. after the troubleshooting.
+
+**Link to work:** [HelloSpring](https://github.com/Wakahisa/HelloSpring)
