--- a/R1.md
+++ b/R1.md
@@ -15,3 +15,11 @@
 **Thoughts:** I couldn't open eclipse since I updated java.. I went into the eclipse.ini and made a tweak I found on stack overflow to reroute the path variable. It was really late and I didn't have energy to do much.. after the troubleshooting.
 
 **Link to work:** [HelloSpring](https://github.com/Wakahisa/HelloSpring)
+
+### Day 3: August 2, Thursday
+
+**Today's Progress**: Not much.. having a hard time creating a java CRUD application, only generated one using netbeans IDE. This is much more difficult than using .NET for sure.
+
+**Thoughts:** Having trouble finding the proper format to create a CRUD java application with my limited time. I have failed to establish connections with my databases using netbeans and eclipse respectively. I can generate code with netbeans if I have a given database already though.
+
+**Link to work:** [HelloSpring](https://github.com/Wakahisa/HelloSpring)
