--- a/R1.md
+++ b/R1.md
@@ -22,4 +22,12 @@
 
 **Thoughts:** Having trouble finding the proper format to create a CRUD java application with my limited time. I have failed to establish connections with my databases using netbeans and eclipse respectively. I can generate code with netbeans if I have a given database already though.
 
-**Link to work:** [HelloSpring](https://github.com/Wakahisa/HelloSpring)
+**Link to work:** None :( I didn't get anything to work properly, bits here and there. 
+
+## Day 4: August 3, Friday
+
+**Today's Progress**: I created a basic HTML websites with all the tags associated with HTML.
+
+**Thoughts:** Today, I had an interview that opened my perspective and motivated me to solidify my understanding of everything I know and then some, so I can explain it with proper terminology and in layman's terms. I created the HTML project with the intent of being able to tell people, for example, HTML consists of elements such as paragraph, headings, images, videos, etc. that can be further broken down into their components. It was more of a practice exercise for me in explanations + understandings!
+
+**Link to work:** None I don't think it is worth uploading.
