--- a/R1.md
+++ b/R1.md
@@ -31,3 +31,19 @@
 **Thoughts:** Today, I had an interview that opened my perspective and motivated me to solidify my understanding of everything I know and then some, so I can explain it with proper terminology and in layman's terms. I created the HTML project with the intent of being able to tell people, for example, HTML consists of elements such as paragraph, headings, images, videos, etc. that can be further broken down into their components. It was more of a practice exercise for me in explanations + understandings!
 
 **Link to work:** None I don't think it is worth uploading.
+
+## Day 1: August 16, Thursday
+
+**Today's Progress**: I created a repository for a hotel management system.
+
+**Thoughts:** I figured making a hotel management system would be a good exercise for me. I was inspired by one of the discord servers I frequent, that has a hotel theme to it. The hotel management system would need to be planned out before I can really dive into it, I'm setting up a project board with tasks I'll complete. So far I have only set-up an initial database without creating any additional models or change to the base user. The rest shall come!
+
+**Link to work:** [Hotel-Management-System](https://github.com/wakahisa/Hotel-Management-System)
+
+## Day 2: August 17, Friday
+
+**Today's Progress**: I went through freecodecamp's HTML5 and CSS tutorials.
+
+**Thoughts:** There was no new information learned for me. I was doing a review and think I should really go straight into the coding projects at the end. I initially learned HTML/CSS just by doing it without really going through tutorials, I wanted to make sure I didn't miss anything, but I suppose I'll be fine since I don't necessarily have to memorize everything to make use of it.
+
+**Link to work:** None.
