--- a/R1.md
+++ b/R1.md
@@ -47,3 +47,19 @@
 **Thoughts:** There was no new information learned for me. I was doing a review and think I should really go straight into the coding projects at the end. I initially learned HTML/CSS just by doing it without really going through tutorials, I wanted to make sure I didn't miss anything, but I suppose I'll be fine since I don't necessarily have to memorize everything to make use of it.
 
 **Link to work:** None.
+
+## Day 3: August 18, Saturday
+
+**Today's Progress**: I completed freecodecamp's Applied Visual Design & Applied Accessibility modules.
+
+**Thoughts:** I enjoyed working through these modules. The Applied Accessibility module in particular gave me insight on how screenreaders function and showed me how to properly make my webpages accessible to those using one. I really only knew about alt tags and wondered why elements were redundant with the same names. Now I have a better understanding!
+
+**Link to work:** None.
+
+## Day 4: August 19, Sunday
+
+**Today's Progress**: I completed the final modules from freecodecamp's Responsive Web Design Certification and began work on my tribute page.
+
+**Thoughts:** I felt I was familiar with most of these concepts already as I had made use of them through bootstrap. Knowing the basic CSS to make use of flexbox and grids will prove useful though in the long run. For my tribute page, I'm considering paying tribute to Megaman-X, a side-scroller game I enjoyed a lot growing up.
+
+**Link to work:** None.
