--- a/R1.md
+++ b/R1.md
@@ -63,3 +63,11 @@
 **Thoughts:** I felt I was familiar with most of these concepts already as I had made use of them through bootstrap. Knowing the basic CSS to make use of flexbox and grids will prove useful though in the long run. For my tribute page, I'm considering paying tribute to Megaman-X, a side-scroller game I enjoyed a lot growing up.
 
 **Link to work:** None.
+
+## Day 5: August 20, Monday
+
+**Today's Progress**: I completed my tribute page for freecodecamp's Responsive Web Design Certification.
+
+**Thoughts:** I changed my tribute topic to Katherine Johnson since I recalled how much I enjoyed watching Hidden Figures. I spent most of my time fact checking after I passed the fcc's test suite. The tribute page itself is pretty barebones, but I felt it got to the point of the matter. I put in the minimal CSS to center align the page. I just realized I created a class for something that already had a class and I named it text-center lol.
+
+**Link to work:** [Tribute Page](https://wakahisa.github.io/fccTributePage/)
