--- a/R1.md
+++ b/R1.md
@@ -68,6 +68,6 @@
 
 **Today's Progress**: I completed my tribute page for freecodecamp's Responsive Web Design Certification.
 
-**Thoughts:** I changed my tribute topic to Katherine Johnson since I recalled how much I enjoyed watching Hidden Figures. I spent most of my time fact checking after I passed the fcc's test suite. The tribute page itself is pretty barebones, but I felt it got to the point of the matter. I put in the minimal CSS to center align the page. I just realized I created a class for something that already had a class and I named it text-center lol.
+**Thoughts:** I changed my tribute topic to Katherine Johnson since I recalled how much I enjoyed watching Hidden Figures. I spent most of my time fact checking after I passed the fcc's test suite. The tribute page itself is pretty barebones, but I felt it got to the point of the matter. I put in the minimal CSS to center align the page. ~~I just realized I created a class for something that already had a class and I named it text-center lol.~~ Nevermind, that's only if I was using bootstrap, which I'm not here.
 
 **Link to work:** [Tribute Page](https://wakahisa.github.io/fccTributePage/)
