--- a/R1.md
+++ b/R1.md
@@ -71,3 +71,11 @@
 **Thoughts:** I changed my tribute topic to Katherine Johnson since I recalled how much I enjoyed watching Hidden Figures. I spent most of my time fact checking after I passed the fcc's test suite. The tribute page itself is pretty barebones, but I felt it got to the point of the matter. I put in the minimal CSS to center align the page. ~~I just realized I created a class for something that already had a class and I named it text-center lol.~~ Nevermind, that's only if I was using bootstrap, which I'm not here.
 
 **Link to work:** [Tribute Page](https://wakahisa.github.io/fccTributePage/)
+
+## Day 6: August 21, Tuesday
+
+**Today's Progress**: I practiced with jQuery and went through a react tutorial.
+
+**Thoughts:** jQuery takes CSS and adds interactivity on top of it to deliver a web experience to users. In the same way that I would target an ID or class with CSS, I can change text, create animations, or hide things with jQuery! I've read about react before, but never really dived into it. I can launch a react app, I hope to do something with it one day though! I like how it is readable :) 
+
+**Link to work:** None.
