--- a/R1.md
+++ b/R1.md
@@ -6,7 +6,7 @@
 
 **Thoughts:** I do way more reading on concepts and material than I have actually been coding. I know it's better to learn as you code, but the information sponge in me wants to know all about my tools first before diving into projects! A weakness of mine I'm trying to fix through 100 days of code! I put the blog portion of the website back and created image hyperlinks to my social media. 
 
-**Link to work:** [Personal Website](wakahisa.github.io)
+**Link to work:** [Personal Website](https://wakahisa.github.io)
 
 ### Day 2: August 1, Wednesday
 
