--- a/R1.md
+++ b/R1.md
@@ -79,3 +79,11 @@
 **Thoughts:** jQuery takes CSS and adds interactivity on top of it to deliver a web experience to users. In the same way that I would target an ID or class with CSS, I can change text, create animations, or hide things with jQuery! I've read about react before, but never really dived into it. I can launch a react app, I hope to do something with it one day though! I like how it is readable :) 
 
 **Link to work:** None.
+
+## Day 6: August 22, Wednesday
+
+**Today's Progress**: I reviewd SQL queries today.
+
+**Thoughts:** Basics of how to create a table, alter a table, insert data, select, where, like.. I was reading how to do joins as well. I wasn't able to hit the more advanced content like EXISTS/NOT EXIST. I'd like to do that tomorrow when I have more energy.
+
+**Link to work:** None.
