--- a/R1.md
+++ b/R1.md
@@ -87,3 +87,11 @@
 **Thoughts:** Basics of how to create a table, alter a table, insert data, select, where, like.. I was reading how to do joins as well. I wasn't able to hit the more advanced content like EXISTS/NOT EXIST. I'd like to do that tomorrow when I have more energy.
 
 **Link to work:** None.
+
+## Day 6: August 23, Thursday
+
+**Today's Progress**: I reviewd more SQL today.
+
+**Thoughts:** Aggregates, with, joins, union, set. I think I have more of the basics down, I haven't got into anything super complex as far as I know. I don't think I should invest too much more time into SQL unless I get a SQL heavy role/position in the future. 
+
+**Link to work:** None.
