--- a/R1.md
+++ b/R1.md
@@ -95,3 +95,27 @@
 **Thoughts:** Aggregates, with, joins, union, set. I think I have more of the basics down, I haven't got into anything super complex as far as I know. I don't think I should invest too much more time into SQL unless I get a SQL heavy role/position in the future. 
 
 **Link to work:** None.
+
+## Day 9: August 24, Friday
+
+**Today's Progress**: I worked on my survey page and tried my hand at APIs.
+
+**Thoughts:** Filled in the necessary divs and I'm not set on what kind of survey I want to do yet. I was excited to make use of a pokemon API, but found it too complicated. I fell back onto a Ghilbi API instead. I'll try again at the pokemon tomorrow.
+
+**Link to work:** None.
+
+## Day 10: August 25, Saturday
+
+**Today's Progress**: I successfully connected to the Ghilbi API and got some data from the pokemon API.
+
+**Thoughts:** The pokemon API is a pain. I get different JSON responses when I send in a request for either a list of pokemon or a particular entry. I don't have the knowledge to handle it yet, but I hope to learn the prerequisites to get there! 
+
+**Link to work:** None.
+
+## Day 11: August 26, Sunday
+
+**Today's Progress**: I am defeated by the pokemon API and I did some work on my Hotel website.
+
+**Thoughts:** I better leave the pokemon API alone for now. I added in a home page to my hotel website and favicon. I added in tasks as well, I might have chewed on more than I could handle. What would an admin of the hotel website want to see? I figured guests would want to know about available services there and what should they be able to do once they login? I figured working on a guest landing page would be a good idea.. not sure if this is the direction I want to go with showing my skills. 
+
+**Link to work:** None.
